<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherRegistration">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/vamk"/>

    <TextView
        android:id="@+id/teacherRegistrationPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/teacher_registration_page"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/teacherUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherRegistrationPage"
        android:layout_margin="20dp"
        android:hint="@string/teacher_username"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@style/MyEditTextStyle" />

    <EditText
        android:id="@+id/teacherFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherUsername"
        android:layout_margin="20dp"
        android:hint="First Name"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@style/MyEditTextStyle" />

    <EditText
        android:id="@+id/teacherLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherFirstname"
        android:layout_margin="20dp"
        android:hint="Last Name"
        android:inputType="text"
        android:padding="10dp"
        android:theme="@style/MyEditTextStyle" />

    <EditText
        android:id="@+id/teacherPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherLastname"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:theme="@style/MyEditTextStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/teacherRegistrationBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teacherPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#CFCFCF"
        android:text="Register"
        android:textColor="@color/black" />

</RelativeLayout>